# skillX

./: .gitignore  INDEX.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
docs/: INDEX.md  skillx-design-principles-v0.1.md  skillx-evaluator-policy-v0.1.md  skillx-framework-synthesis-v0.1.md  skillx-minimal-authoring-format-v0.1.md
scripts/: audit_skillx_inner_loop_results.py  build_outer_loop_update_decision.py  build_round0_checkpoint_report.py  build_round0_global_status.py  build_round0_outer_loop_artifacts.py  build_round0_rerun_recovery.py  build_round0_schema_update_package.py  cache_skillsbench_official_results.py  check_sensitive_info.py  distill_skillx_session_evidence.py  export_round0_run_report.py  finalize_round0_rerun_recovery.sh  heartbeat_round1_batches.py  heartbeat_round2_guarded_patch_batches.py  launch_skillx_round0.py  materialize_skillx_round0_runner.py  monitor_c4ar_heartbeat.py  monitor_skillx_run.py  monitor_skillx_runs.py  rematerialize_metric_gated_scientific_pipeline_root.sh  rematerialize_round0_next20_root.sh  rematerialize_round0_rerun_recovery_root.sh  rematerialize_round0_root.sh  run_metric_gated_scientific_pipeline_monitor.sh  run_metric_gated_scientific_pipeline_tmux.sh  run_outer_loop_optimization.py  run_round0_experiment_tmux.sh  run_round0_monitor.sh  run_round0_next20_monitor.sh  run_round0_next20x7_tmux.sh  run_round0_remaining_17x7_tmux.sh  run_round0_rerun_canary_tmux.sh  run_round0_rerun_recovery_resume_tmux.sh  run_round0_rerun_recovery_tmux.sh  run_skillx_first20_outer_step.sh  run_skillx_inner_loop_tmux.sh  (+13 more)
(+1428 files in other folders)
