[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillx"
version = "0.1.0"
description = "Standalone SkillX repository for skill rewrite and bounded refinement experiments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12,<3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["skillx*"]
